# raglite

./: .gitignore  L0_setup.md  L3_ingest_chunking_lab.md  README.MD  pyproject.toml  rag.md  requset.http
L1_student/: L1_flask_factory.md  L1_student_notes.md
raglite/: __init__.py  chunking.py  db.py  embedding.py  rag.py  schema.sql
