[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglite"
version = "0.1.0"
description = "RAG application with Flask and SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "numpy>=1.26",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["raglite*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]